--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = teensy
 board = teensy40
 framework = arduino
 monitor_speed = 115200
+build_flags = -D TEENSY_OPT_FASTEST_LTO
 lib_deps = 
 	ProtoTracer
 	SPI
@@ -37,6 +38,7 @@ platform = teensy
 board = teensy41
 framework = arduino
 monitor_speed = 115200
+build_flags = -D TEENSY_OPT_FASTEST_LTO
 lib_deps = 
 	ProtoTracer
 	SPI
