implement working boop sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.7
 	adafruit/Adafruit seesaw Library@^1.6.3
 	adafruit/Adafruit MMC56x3@^1.0.0
+	sparkfun/SparkFun APDS9960 RGB and Gesture Sensor@^1.4.3
 
 [env:teensy41]
 platform = teensy
@@ -53,6 +54,7 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.7
 	adafruit/Adafruit seesaw Library@^1.6.3
 	adafruit/Adafruit MMC56x3@^1.0.0
+	sparkfun/SparkFun APDS9960 RGB and Gesture Sensor@^1.4.3
 
 [platformio]
 description = This project is a 3D ray-tracing and animation engine for pixel matrices, designed to be used for drawing live animations on Protogen style characters from 3D object files (.OBJ).
